force-app/main/default/objects/DC_IT_Cooling__c/DC_IT_Cooling__c.object-meta.xml
<CustomObject>
    <label>IT Cooling</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Coolings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>