force-app/main/default/objects/DC_IT_Cooling__c/fields/Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Data_Hall__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Datahall this IT Cooling is supporting.</description>
    <label>Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>IT Coolings</relationshipLabel>
    <relationshipName>IT_Coolings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>