force-app/main/default/objects/DC_IT_Cooling__c/fields/Design_Capacity_tons__c.field-meta.xml
<CustomField>
    <fullName>Design_Capacity_tons__c</fullName>
    <description>Total capacity of this IT Cooling in tons of water.</description>
    <label>Design Capacity (tons)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>