force-app/main/default/objects/DC_IT_Cooling__c/fields/Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Subdivision__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The  Subdivision feeding this IT Cooling.</description>
    <label>Subdivision</label>
    <referenceTo>DC_Subdivision__c</referenceTo>
    <relationshipLabel>IT Coolings</relationshipLabel>
    <relationshipName>IT_Coolings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>