force-app/main/default/objects/DC_IT_Cooling__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of IT Cooling.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRAC</fullName>
            </value>
            <value>
                <fullName>CRAH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>